<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.LoginActivity"
    android:background="@color/brandcolor"
    android:id="@+id/lllogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/wlogo"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/brandcolor"
            app:boxStrokeColor="@color/white"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etlemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/blinkerregular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/brandcolor"
            app:boxStrokeColor="@color/white"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etlpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:fontFamily="@font/blinkerregular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <CheckBox
            android:id="@+id/cbremember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Remember Me"
            android:layout_gravity="center_vertical"
            android:buttonTint="@color/white"
            android:fontFamily="@font/blinkerregular"
            android:textSize="17sp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textSize="20sp"
            android:textColor="@color/brandcolor"
            android:textStyle="bold"
            android:background="@drawable/buttoncorner"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/blinkerbold"
            android:layout_marginBottom="15dp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="New to our app? "
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="16dp"/>
            <TextView
                android:id="@+id/tvcreate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="Create Account"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@color/antique"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>