<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.SignupActivity"
    android:background="@color/brandcolor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/wlogo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="Create Account"
            android:textColor="@color/white"
            android:fontFamily="@font/blinkerbold"
            android:textSize="25sp"
            android:gravity="center"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/brandcolor"
            app:boxStrokeColor="@color/white"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/white"
                app:hintTextColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Name"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/blinkerregular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/brandcolor"
            app:boxStrokeColor="@color/white"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etmobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Mobile"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/blinkerregular"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/brandcolor"
            app:boxStrokeColor="@color/white"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Email"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="@font/blinkerregular"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/brandcolor"
            app:boxStrokeColor="@color/white"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:fontFamily="@font/blinkerregular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/brandcolor"
            app:boxStrokeColor="@color/white"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/white"
            app:hintTextColor="@color/white"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etrepassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:hint="Re-Password"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:fontFamily="@font/blinkerregular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign UP"
            android:textSize="20sp"
            android:textColor="@color/brandcolor"
            android:textStyle="bold"
            android:background="@drawable/buttoncorner"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/blinkerbold"
            android:layout_marginBottom="15dp"/>
    </LinearLayout>
</ScrollView>