...
                android:textColor="@color/white"
                android:textSize="11sp"
                android:inputType="textPassword"
                android:fontFamily="@font/blinkerregular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="LOGIN"
            android:textSize="15sp"
            android:textColor="@color/brandcolor"
            android:textStyle="bold"
...
